--- a/style.css
+++ b/style.css
@@ -26,21 +26,20 @@ body{
     font-family: var(--main-font)
 }
 
-.container{
+
+.home-container{
     width:100%;
     height: auto;
     padding-top: 15vh;
     display: flex;
     flex-direction: row;
     justify-content:space-evenly;
+    z-index: 0;
+    padding-bottom: 11vh;
 }
 
-.container-page{
-    height: 100vh;
-}
 
-
-.info_container{
+.home-info_container{
     padding-top: 50px;
     position: relative;
     margin-left: 100px;
@@ -50,7 +49,12 @@ body{
     flex-direction: column;
     justify-content:space-around;
     flex-wrap: wrap;
+}
 
+.container{
+    height: 100vh;
+    border: 6px solid red;
+    padding-left: 10%;
 }
 
 .header{
@@ -62,7 +66,8 @@ body{
     margin: 0 auto;
     font-family: NunitoRegular;
     font-size:2rem;
-    margin-bottom:2vh
+    margin-bottom:2vh;
+    z-index:1000;
 }
 
 .header a{
@@ -76,6 +81,18 @@ body{
 }
 
 
+.textzone{
+    margin-top: 5%;
+    width:35%;
+    height: 20vh;
+    border: solid 3px blue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+
 .title {
     margin-top: 5px;
     margin-bottom: 5px;
@@ -84,6 +101,16 @@ body{
     justify-content: center;
     position: relative;
     font-size: 5rem;
+    color: var(--main-color)
+}
+
+
+.section-title {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding:0;
+    font-size: 3rem;
+    text-align: center;
     color: var(--main-color)
 }
 
@@ -105,7 +132,7 @@ body{
 
 .sub-title{
     width :50%;
-    font-size: 45px;
+    font-size: 40px;
     color: var(--text-color)
 }
 
@@ -133,6 +160,7 @@ body{
 
 
 .ring ul{
+    z-index:1000;
     display:flex;
     flex-direction: column;
     position:fixed;
@@ -237,4 +265,120 @@ body{
 	-webkit-animation: fade_move_down 2s ease-in-out infinite;/*Animation webkit importée*/
 	-moz-animation:    fade_move_down 2s ease-in-out infinite;
 	animation:         fade_move_down 2s ease-in-out infinite;
+}
+
+
+/*CAROUSEL*/
+
+
+.carousel {
+    margin-right: 2rem;
+    position: relative;
+    box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
+    margin-top: 26px;
+}
+
+.carousel-inner {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+}
+
+.carousel-open:checked + .carousel-item {
+    position: relative;
+    opacity: 100;
+}
+
+.carousel-item {
+    position: absolute;
+    width: 100%;
+    height:80vh;
+    background-color: #BCD2F3;
+    opacity: 0;
+    -webkit-transition: opacity 0.6s ease-out;
+    transition: opacity 0.6s ease-out;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content:space-evenly;
+    
+}
+
+.carousel-item img {
+    display: block;
+    height: auto;
+    max-width: 50%;
+}
+
+.carousel-control {
+    background: rgba(0, 0, 0, 0.28);
+    border-radius: 50%;
+    color: #fff;
+    cursor: pointer;
+    display: none;
+    font-size: 40px;
+    height: 40px;
+    line-height: 35px;
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translate(0, -50%);
+    cursor: pointer;
+    -ms-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+    text-align: center;
+    width: 40px;
+    z-index: 10;
+}
+
+.carousel-control.prev {
+    left: 2%;
+}
+
+.carousel-control.next {
+    right: 2%;
+}
+
+.carousel-control:hover {
+    background: rgba(0, 0, 0, 0.8);
+    color: #aaaaaa;
+}
+
+#carousel-1:checked ~ .control-1,
+#carousel-2:checked ~ .control-2,
+#carousel-3:checked ~ .control-3 {
+    display: block;
+}
+
+.carousel-indicators {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    bottom: 2%;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: 10;
+}
+
+.carousel-indicators li {
+    display: inline-block;
+    margin: 0 5px;
+}
+
+.carousel-bullet {
+    color: #fff;
+    cursor: pointer;
+    display: block;
+    font-size: 35px;
+}
+
+.carousel-bullet:hover {
+    color: #aaaaaa;
+}
+
+#carousel-1:checked ~ .control-1 ~ .carousel-indicators li:nth-child(1) .carousel-bullet,
+#carousel-2:checked ~ .control-2 ~ .carousel-indicators li:nth-child(2) .carousel-bullet,
+#carousel-3:checked ~ .control-3 ~ .carousel-indicators li:nth-child(3) .carousel-bullet {
+    color: #428bca;
 }
