--- a/style.css
+++ b/style.css
@@ -26,6 +26,11 @@ body{
     font-family: var(--main-font)
 }
 
+p{
+    font-family: Nunito;
+    color: var(--text-color);
+}
+
 
 .home-container{
     width:100%;
@@ -53,7 +58,6 @@ body{
 
 .container{
     height: 100vh;
-    border: 6px solid red;
     padding-left: 10%;
 }
 
@@ -82,14 +86,19 @@ body{
 
 
 .textzone{
+    background-color: floralwhite;
+    font-size: 0.9rem;
+    border-radius: 3em;
     margin-top: 5%;
+    margin-bottom: 5%;
+    padding: 5px 10px 5px 10px;
     width:35%;
-    height: 20vh;
-    border: solid 3px blue;
+    height: auto;
+    border:groove var(--main-color) 2px;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
     flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 
@@ -293,6 +302,7 @@ body{
     position: absolute;
     width: 100%;
     height:80vh;
+    padding-top: 5vh;
     background-color: #BCD2F3;
     opacity: 0;
     -webkit-transition: opacity 0.6s ease-out;
@@ -307,7 +317,9 @@ body{
 .carousel-item img {
     display: block;
     height: auto;
+    width: auto;
     max-width: 50%;
+    max-height: 90%;
 }
 
 .carousel-control {
@@ -382,3 +394,70 @@ body{
 #carousel-3:checked ~ .control-3 ~ .carousel-indicators li:nth-child(3) .carousel-bullet {
     color: #428bca;
 }
+
+
+
+
+button {
+    background:transparent;
+    color:var(--main-color);
+    border-color:var(--main-color);
+    border-width:3px;
+    border-style: solid;
+    position:relative;
+    margin:1em;
+    display:inline-block;
+    padding:0.8em 1em;
+    transition:all 0.3s ease-in-out;text-align:center;
+    font-family:var(--main-font);
+    font-weight:bolder;
+    cursor: pointer;
+}
+
+button:before, button:after {
+    content:'';
+    display:block;
+    position:absolute;
+    border-color:#454545;
+    box-sizing:border-box;
+    border-style:solid;
+    width:1em;
+    height:1em;
+    transition:all 0.3s ease-in-out
+}
+
+button:before {
+    top:-6px;
+    left:-6px;
+    border-width:2px 0 0 2px;
+    z-index:5;
+}
+
+button:after {
+    bottom:-6px;
+    right:-6px;
+    border-width:0 2px 2px 0;
+}
+
+button:hover:before, button:hover:after {
+    width:calc(100% + 12px);
+    height:calc(100% + 12px);border-color:#fff
+}
+button:hover {
+    color:#353535;
+    background-color:#fff;
+    border-color:#fff
+}
+
+.panel {
+    max-width:960px;
+    text-align:center;
+    position:relative;
+    margin:auto;
+}
+
+
+.pink button:before, .pink button:after  {border-color:var(--main-color)}
+.pink button:hover:before, .pink button:hover:after {border-color:var(--main-color);}
+.pink button:hover {color:#fff;background-color:var(--main-color);border-color:var(--main-color);}
+.pink .panel {max-width:960px;text-align:center;position:relative;margin:auto;}
