--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ p{
     color: var(--text-color);
 }
 
+h2{
+    padding: 0 0 0 0 ;
+    margin: 0 0 0 0;
+}
 
 .home-container{
     width:100%;
@@ -87,11 +91,11 @@ p{
 
 .textzone{
     background-color: floralwhite;
-    font-size: 0.9rem;
+    font-size: 0.92rem;
     border-radius: 3em;
     margin-top: 5%;
     margin-bottom: 5%;
-    padding: 5px 10px 5px 10px;
+    padding: 5px 20px 5px 20px;
     width:35%;
     height: auto;
     border:groove var(--main-color) 2px;
