--- a/style.css
+++ b/style.css
@@ -66,6 +66,32 @@ h2{
     padding-top: 3vh;
 }
 
+.icon-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 0 10% 2% 10%;
+}
+
+.icon-box{
+    display: flex;
+    flex-direction: column;
+    width: 33%;
+    height: auto;
+
+}
+
+.icon-box img{
+    padding: 0 25% 0 25%;
+}
+.icon-box h2{
+    font-size: 1.5vw;
+    text-align:center;
+    color: var(--main-color);
+    margin: 0;
+}
+
 .header{
     width:80vh;
     display:flex;
@@ -92,7 +118,7 @@ h2{
 
 .textzone{
     background-color: rgb(89, 149, 156);
-    font-size: 0.9rem;
+    font-size: 0.9em;
     border-radius: 3em;
     margin-top: 5%;
     margin-bottom: 5%;
@@ -109,11 +135,11 @@ h2{
 
 .textzone p{
     color: white;
-    font-size: 1.1rem;
+    font-size: 1.2vw;
 }
 
 .textzone h2{
-    font-size: 40px ;
+    font-size: 3vw ;
     text-align:center;
     color: #92ece0;
     margin: 0;
@@ -121,13 +147,12 @@ h2{
 
 
 .title {
-    margin-top: 5px;
-    margin-bottom: 5px;
     display: flex;
     padding:0;
+    margin: 0 5 0 5;
     justify-content: center;
     position: relative;
-    font-size: 5rem;
+    font-size: 5.1vw;
     color: var(--main-color)
 }
 
@@ -136,7 +161,7 @@ h2{
     margin-top: 5px;
     margin-bottom: 5px;
     padding-bottom:1vh;
-    font-size: 3rem;
+    font-size: 3vw;
     text-align: center;
     color: var(--main-color)
 }
@@ -159,7 +184,7 @@ h2{
 
 .sub-title{
     width :50%;
-    font-size: 40px;
+    font-size: 3vw;
     color: var(--text-color)
 }
 
@@ -170,7 +195,7 @@ h2{
     overflow: hidden;
     border-right: 3px solid;
     font-family: monospace;
-    font-size: 1.80em;
+    font-size: 1.54vw;
 }
   
 @keyframes typing {
@@ -319,8 +344,7 @@ h2{
 .carousel-item {
     position: absolute;
     width: 100%;
-    height:75vh;
-    padding-top: 5vh;
+    height:40vw;
     background-color:#b6e4df;
     opacity: 0;
     -webkit-transition: opacity 0.6s ease-out;
@@ -410,6 +434,121 @@ h2{
 #carousel-1:checked ~ .control-1 ~ .carousel-indicators li:nth-child(1) .carousel-bullet,
 #carousel-2:checked ~ .control-2 ~ .carousel-indicators li:nth-child(2) .carousel-bullet,
 #carousel-3:checked ~ .control-3 ~ .carousel-indicators li:nth-child(3) .carousel-bullet {
+    color: #428bca;
+}
+
+
+.carousel4 {
+    margin-right: 2rem;
+    position: relative;
+    box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
+    margin-top: 26px;
+}
+
+.carousel4-inner {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+}
+
+.carousel4-open:checked + .carousel4-item {
+    position: relative;
+    opacity: 100;
+}
+
+.carousel4-item {
+    position: absolute;
+    width: 100%;
+    height:40vw;
+    background-color:#b6e4df;
+    opacity: 0;
+    -webkit-transition: opacity 0.6s ease-out;
+    transition: opacity 0.6s ease-out;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content:space-evenly;
+    
+}
+
+.carousel4-item img {
+    display: block;
+    height: auto;
+    width: auto;
+    max-width: 50%;
+    max-height: 90%;
+}
+
+.carousel4-control {
+    background: rgba(0, 0, 0, 0.28);
+    border-radius: 50%;
+    color: #fff;
+    cursor: pointer;
+    display: none;
+    font-size: 40px;
+    height: 40px;
+    line-height: 35px;
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translate(0, -50%);
+    cursor: pointer;
+    -ms-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+    text-align: center;
+    width: 40px;
+    z-index: 10;
+}
+
+.carousel4-control.prev {
+    left: 2%;
+}
+
+.carousel4-control.next {
+    right: 2%;
+}
+
+.carousel4-control:hover {
+    background: rgba(0, 0, 0, 0.8);
+    color: #aaaaaa;
+}
+
+#carousel4-1:checked ~ .control-1,
+#carousel4-2:checked ~ .control-2,
+#carousel4-3:checked ~ .control-3 {
+    display: block;
+}
+
+.carousel4-indicators {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    bottom: 2%;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: 10;
+}
+
+.carousel4-indicators li {
+    display: inline-block;
+    margin: 0 5px;
+}
+
+.carousel4-bullet {
+    color: #fff;
+    cursor: pointer;
+    display: block;
+    font-size: 35px;
+}
+
+.carousel4-bullet:hover {
+    color: #aaaaaa;
+}
+
+#carousel4-1:checked ~ .control-1 ~ .carousel4-indicators li:nth-child(1) .carousel4-bullet,
+#carousel4-2:checked ~ .control-2 ~ .carousel4-indicators li:nth-child(2) .carousel4-bullet,
+#carousel4-3:checked ~ .control-3 ~ .carousel4-indicators li:nth-child(3) .carousel4-bullet {
     color: #428bca;
 }
 
