--- a/style.css
+++ b/style.css
@@ -108,14 +108,14 @@ h2{
 
 
 .header{
-    width:80vh;
+    width:40vw;
     display:flex;
     justify-content: space-evenly;
     background-color: var(--main-color);
     position:relative;
     margin: 0 auto;
     font-family: NunitoRegular;
-    font-size:2rem;
+    font-size:2.5vw;
     margin-bottom:2vh;
     z-index:1000;
 }
