--- a/contact.css
+++ b/contact.css
@@ -2,7 +2,7 @@
     background: #E1F8F6;
     --main-color: #2CBFB4;
     --secondary-color: #E1F8F6;
-    --text-color:white;
+    --text-color:#827676;
     --pane-padding: 5px 42px;
     --main-font:  Nunito;
     scroll-behavior: smooth;
@@ -32,6 +32,8 @@ body{
 }
 
 
+
+
 .header{
     width:40vw;
     display:flex;
@@ -56,74 +58,24 @@ body{
 }
 
 
-.central{
-    margin-top: 10vh;
-    padding-top: 2vh;
-    width: 80vw;
-    margin-left: 9vw;
-    height: auto;
-    background-color: var(--main-color);
-    padding-bottom: 10vh;
-}
-
 .container{
-    padding-left: 5vw;
-    padding-right: 5vw;
-}
-
-.image-flex{
+    padding-top:30vh;
     width: auto;
+    height: auto;
     display: flex;
-    flex-direction: row;
+    flex-direction:row;
     flex-wrap: wrap;
     justify-content: space-evenly
 }
 
-.image-flex img{
-    padding-bottom: 2vh;
-    width:29vw;
-    height: auto;
+.container img{
+    width: 180px;
+    margin: 40px 40px 40px 40px;
+    transition: transform .4s;
 }
 
-figure{
-    text-align: center;
-    color: var(--text-color);
-    font-size:1vw;
+.container img:hover{
+    -ms-transform: scale(1.1); 
+    -webkit-transform: scale(1.1); 
+    transform: scale(1.1);
 }
-
-h1{
-    color: var(--secondary-color);
-    text-align: center;
-    font-size: 4vw;
-
-}
-
-h2{
-    color:#79d7ff;
-    font-size: 2.5vw;
-}
-
-.sous-titre{
-    color:#79d7ff;
-    font-size: 2vw;
-}
-
-p{
-    color: var(--text-color);
-    font-size:1.3vw;
-    font-family: NunitoRegular;
-}
-
-a{ 
-    text-decoration: none; 
-    color:#9dd4eb;
-    font-weight: bold;
-}
-
-a:hover{ 
-    color: rgb(229, 198, 255);
-}
-
-
-
-
